Fix logo overflow

--- a/src/components/navigation/Logo.module.scss
+++ b/src/components/navigation/Logo.module.scss
@@ -4,6 +4,7 @@
   text-align: 'center';
   max-width: 100%;
   padding-left: 30px;
+  overflow: hidden;
 }
 
 .logoImage {
